--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "dayjs": "^1.8.25",
+    "i18next": "^19.4.5",
+    "i18next-browser-languagedetector": "^4.2.0",
+    "i18next-http-backend": "^1.0.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^4.10.2",
+    "react-i18next": "^11.5.0",
     "react-recaptcha": "^2.3.10",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
