--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,9 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.0"
+    "socket.io-client": "^2.3.0",
+    "styled-components": "^5.1.0",
+    "use-sound": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
