--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.0",
-    "use-sound": "^1.0.2"
+    "use-sound": "^1.0.2",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
